Security module correct works. Need to integrate with gateway api